--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -1,44 +1,79 @@
-.info{
+.info {
     display: flex;
     justify-content: space-between;
     gap: 3rem;
     margin-top: 4rem;
 }
-.info .name{
+
+.info .name {
     min-width: 40%;
     font-size: 1.5rem;
 }
-.description p{
+
+.description p {
     color: #ccc;
     line-height: 24px;
 }
-.curriculum{
+
+.curriculum {
     display: flex;
     gap: 3rem;
     margin-top: 5rem;
 }
-.item_container{
+
+.item_container {
     flex: 1;
 }
-.item_container h2{
+
+.item_container h2 {
     font-size: 2rem;
 }
-.item_container .item{
+
+.item_container .item {
     margin-top: 2rem;
     border-bottom: 1px solid #ccc;
     padding: 0 0 2rem 0;
-    
+
 }
-.item_container .item h3{
+
+.item_container .item h3 {
     text-transform: uppercase;
     font-weight: 600;
+    /* font-size: 1.5rem; */
 }
+
 .item_container .item p,
-.item_container .item span{
-    color: rgba(255,255,255, .5);
+.item_container .item span {
+    color: rgba(255, 255, 255, .5);
 }
+
 .curriculum_info {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-top: .5rem;
+}
+
+.curriculum_info span{
+    min-width: 7.2rem;
+    text-align: right;
+}
+
+@media(max-width: 768px) {
+    .info {
+        flex-direction: column;
+        gap: 1rem;
+        margin-top: 0
+    }
+
+    .curriculum {
+        flex-direction: column;
+    }
+
+    .curriculum_info span{
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-end;      
+
+    }
 }
