--- a/src/pages/Projects/Projects.module.css
+++ b/src/pages/Projects/Projects.module.css
@@ -40,3 +40,29 @@
     color:#ccc;
     line-height: 24px;
 }
+@media (max-width:768px){
+    .title{
+        margin-top: 2rem;
+        font-size: 1.5rem;
+    }
+    /* .project{margin-top: 1rem;} */
+    .project:nth-child(2n+1){
+        margin-top: 3rem;
+        display: flex;
+        flex-direction:column;        
+        gap: 3rem;        
+    }
+    .project:nth-child(2n){
+        margin-top: 3rem;
+        display: flex;
+        flex-direction:column-reverse;        
+        gap: 3rem;        
+    }
+    .project .preview{
+        /* width: 100%; */
+        height: 380px;
+        overflow: hidden;
+    }
+
+    
+}
