--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -3,7 +3,7 @@
     justify-content: space-between;
     padding: 1rem;
     max-width: 1200px;
-    margin: 0 auto;    
+    margin: 0 auto;
 }
 
 .nav_left {
@@ -107,11 +107,11 @@
         justify-content: center;
     }
 
-    .logo{
+    .logo {
         display: none;
     }
 
-    .nav_left{
+    .nav_left {
         flex-direction: column;
         /* justify-content: flex-start; */
         align-items: flex-start;
@@ -120,45 +120,17 @@
         /* padding: 0 0 2rem 0; */
     }
 
-    .links.open {
+    .nav_left .links {
         display: none;
-      }
-
-    .links{
-        /* display: none; */
         flex-direction: column;
-        /* background-color: #a70000; */
-        /* height: 100vh; */
         width: 100%;
-        /* position: absolute; */
-        /* flex: 1; */
     }
-    .links a{
+
+    .links.open {
+        display: flex;
+    }
+
+    .links a {
         border-bottom: 1px solid #ccc;
     }
 }
-
-/* @media (max-width: 768px) {
-    .links {
-      display: none;
-      flex-direction: column;
-      position: absolute;
-      top: 60px;
-      left: 0;
-      background-color: #f9f9f9;
-      width: 100%;
-      padding: 10px;
-    }
-  
-    .links.open {
-      display: flex;
-    }
-  
-    .menu_toggle {
-      display: block;
-    }
-  
-    .button {
-      display: none;
-    }
-  }  */
