--- a/src/pages/Projects/Projects.module.css
+++ b/src/pages/Projects/Projects.module.css
@@ -21,6 +21,11 @@
     /* align-items: center; */
     justify-content: center;
 }
+.project .buttons{
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+}
 .project .preview{
     width: 100%;
     height: 500px;
